@@ -29,6 +29,7 @@
 - Support autopagination, first page is loaded in first request, then all pages are loaded and displayed by ajax automatically
 - Support toggle collection action links, for links with reload list to filter, so active link is marked
 - Support search and field_search at same time
+- Support for overriding how download url is get for dragonfly attachment
 
 = 3.3.3
 - Allow to override select options in active_scaffold_search_select
